--- a/GeoFencer/Base.lproj/Main.storyboard
+++ b/GeoFencer/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="UO9-Hm-jsj">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="WCG-bz-BV5"/>
+                                </connections>
                             </mapView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="UQA-pH-FdH">
                                 <rect key="frame" x="20" y="520" width="560" height="60"/>
