Don't enable reset or share button if there's no data

--- a/GeoFencer/Base.lproj/Main.storyboard
+++ b/GeoFencer/Base.lproj/Main.storyboard
@@ -109,6 +109,7 @@
                         <outlet property="doneButton" destination="VJc-yX-Lq1" id="FfT-AK-fog"/>
                         <outlet property="firstButton" destination="Ec5-fc-drR" id="9Jz-Av-hxF"/>
                         <outlet property="mapView" destination="UO9-Hm-jsj" id="yfI-IO-8kq"/>
+                        <outlet property="resetButton" destination="uey-NV-B6n" id="uYt-JR-UAN"/>
                         <outlet property="secondButton" destination="awo-lg-dDq" id="oyZ-2J-RmR"/>
                         <outlet property="shareButton" destination="1gY-PF-otC" id="PBU-KF-W8X"/>
                     </connections>
